fix: remove scrollbar from minicart recap

--- a/components/MinCart/styles.module.scss
+++ b/components/MinCart/styles.module.scss
@@ -15,6 +15,9 @@
   }
 }
 
+.recapCart::-webkit-scrollbar {
+  width: 0px;
+}
 .recapCart {
   background-color: $primary-color;
   color: white;
